<resources>
    <string name="app_name">Recept-konverterare</string>
    <string name="title_home">Skapa recept</string>
    <string name="title_my_recipes">Mina recept</string>
    <string name="title_settings">Inställningar</string>
    <string name="edit_text_ingredient">Ange ingrediens</string>
    <string name="edit_text_amount">Mängd</string>
    <string name="new_amount">Ny mängd</string>
    <string name="add_button_text">Lägg till\ni recept</string>
    <string name="next_button_text">Nästa</string>
    <string name="edit_title">Ange receptnamn</string>
    <string name="new_recipe_button_text">Skapa nytt recept</string>
    <string name="title_add_ingredients">Lägg till Ingrediens</string>
    <string name="recipe_text">"Recept: "</string>
    <string name="ingredients_added_so_far">Hittills tillagda ingredienser:\n</string>
    <string name="choose_base_ingredient">Välj Basingrediens</string>
    <string name="generate_recipe">Generera recept!</string>
    <string name="new_amount_instruction">Ange mängen av din valda ingrediens som det nya receptet ska baseras på:</string>
    <string name="no_recipes_found">Finns inga recept</string>
    <string name="text_size_normal">24sp</string>
    <string name="text_size_title">28sp</string>
    <string name="default_unit_position_key">default_unit_position</string>
    <string name="default_unit_text">Standardenhet:</string>
    <string name="dialog_confirm_delete">Är du säker på att du vill ta bort ditt recept?</string>
    <string name="yes">ja</string>
    <string name="cancel">nej</string>
    <string name="toast_new_recipe_generated">Nytt recept har genererats!\nSe \"Mina Recept\"</string>
    <string name="toast_empty_base_amount">Ange ny mängd av vald ingrediens!</string>
    <string name="toast_empty_fields">Alla fält måste vara ifyllda!</string>
    <string name="toast_no_title">Receptet behöver en titel!</string>
    <string name="toast_recipe_deleted">Recept borttaget</string>
</resources>