<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.recipe_converter_app.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_HomeFragment_to_AddIngredientsFragment"
            app:destination="@id/navigation_add_ingredients" />
    </fragment>
    <fragment
        android:id="@+id/navigation_my_recipes"
        android:name="com.example.recipe_converter_app.ui.my_recipes.MyRecipesFragment"
        android:label="@string/title_my_recipes"
        tools:layout="@layout/fragment_my_recipes"/>
    <action
        android:id="@+id/action_MyRecipesFragment_to_ViewRecipeFragment"
        app:destination="@id/navigation_view_recipe" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.recipe_converter_app.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/navigation_add_ingredients"
        android:name="com.example.recipe_converter_app.ui.home.AddIngredientsFragment"
        android:label="@string/title_add_ingredients"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_AddIngredientsFragment_to_ChooseBaseIngredientFragment"
            app:destination="@id/navigation_choose_base_ingredients" />

    </fragment>
    <fragment
        android:id="@+id/navigation_choose_base_ingredients"
        android:name="com.example.recipe_converter_app.ui.home.ChooseBaseIngredientFragment"
        android:label="@string/choose_base_ingredient"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_ChooseBaseIngredientFragment_to_HomeFragment"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_view_recipe"
        android:name="com.example.recipe_converter_app.ui.my_recipes.ViewRecipeFragment"
        android:label=""
        tools:layout="@layout/fragment_my_recipes">

    </fragment>

</navigation>