<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.AddIngredientsFragment"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/recipe_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="28sp"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/edit_ingredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:hint="@string/edit_text_ingredient"
                android:textSize="24sp"
                android:inputType="text"
                android:singleLine="true"
                android:imeOptions="actionNext"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/edit_amount"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:minHeight="50dp"
                    android:textSize="24sp"
                    android:hint="@string/edit_text_amount"
                    android:inputType="numberDecimal"/>

                <Spinner
                    android:id="@+id/unit_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollbarSize="24dp"
                    android:minWidth="30dp"
                    android:minHeight="24dp"/>
            </LinearLayout>

            <Button
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_button_text"
                android:textSize="18sp"
                android:layout_gravity="end"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textSize="24sp"
                android:text="@string/ingredients_added_so_far"
                android:gravity="center"/>
            <TextView
                android:id="@+id/current_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp" />
            <Button
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/next_button_text"
                android:layout_gravity="center"
                android:enabled="false"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>